--- a/Cook/src/app.css
+++ b/Cook/src/app.css
@@ -5,8 +5,7 @@
 }
 body {
   background-color: darkgray;
- font-family: 'Inter', sans-serif;
-font-family: 'Orbitron', sans-serif;;
+  font-family: 'Dancing Script', cursive;
 }
 
 header {
@@ -25,6 +24,7 @@ nav {
   padding: 2rem;
   width: 100%;
   height: 50px;
+  z-index: 1;
   position: fixed;
   background-color: aqua;
   border-bottom-left-radius: 50px;
@@ -62,8 +62,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-   border-top-right-radius: 50px;
-    border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+  border-top-left-radius: 50px;
 }
 
 p {
@@ -74,6 +74,14 @@ p {
 img {
   border-radius: 15px;
   border: 2px solid aqua;
+  transition: 0.4s ease-in-out;
+  cursor: pointer;
+  z-index: 0;
+}
+
+img:hover {
+  transform: scale(1.1);
+  box-shadow: 0 2px 2px grey;
 }
 
 ::-webkit-scrollbar {
@@ -83,6 +91,19 @@ img {
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: #000;
+}
+
+.title {
+  margin-top: 1rem;
+  text-transform: capitalize;
+  color: #fff;
+}
+
+img {
+  width: 200px;
+  height: 200px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 @media (max-width: 600px) {
