--- a/Pokedex/src/routes/app.css
+++ b/Pokedex/src/routes/app.css
@@ -58,7 +58,7 @@ nav {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #000;
+  background-color: skyblue;
 }
 
 /* Footer */
@@ -75,4 +75,29 @@ footer {
   text-align: center;
   text-transform: capitalize;
   color: #fff;
+}
+
+/* Responsividade */
+
+@media (max-width: 600px) {
+  .logo {
+    display: none;
+  }
+  nav {
+    display: flex;
+    justify-content: center;
+    background-color: skyblue;
+    border-bottom-left-radius: 30px;
+  }
+  footer {
+    background-color: skyblue;
+    border-top-right-radius: 30px;
+  }
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: crimson;
+  }
 }
