Cards estilizados com sucesso Footer concluido com sucesso.

--- a/Pokedex/src/routes/app.css
+++ b/Pokedex/src/routes/app.css
@@ -58,7 +58,17 @@ nav {
 }
 
 ::-webkit-scrollbar-thumb {
+  background-color: crimson;
+}
+
+.pokemons {
+  padding: 2rem;
   background-color: skyblue;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-top: 3rem;
 }
 
 /* Footer */
